<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Samtakie Radio</string>
    <string name="title_activity_detail">Radio %1$s is Playing</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="action_list">List</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_share">Share</string>

    <string name="koyeba">http://67.222.30.191:8018/;KOYEBA.mp3</string>
    <string name="radio_apintie">http://s6.voscast.com:8150/;</string>
    <string name="radio_10">https://streams.radio.co/s28bc986cd/listen</string>
    <string name="radio_boskupu">http://sc.sr.netmPlayback:8000/radio2-1</string>

    <string name="button">button 34</string>
    <string name="centering">Center</string>
    <string name="centered_button">center button</string>

    <string-array name="samtakie_radio">
        <item>http://67.222.30.191:8018/;KOYEBA.mp3</item>
        <item>http://s6.voscast.com:8150/;</item>
        <item>https://streams.radio.co/s28bc986cd/listen</item>
        <item>http://sc.sr.net:8000/radio2-1</item>
    </string-array>

    <string-array name="samtakie_radio_name">
        <item>Koyeba</item>
        <item>Radio Apintie</item>
        <item>Radio 10</item>
        <item>Radio Boskupu</item>
    </string-array>

    <string name="channel_name">Djoga500</string>
    <string name="label_stop">Stop</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_play_pause">Play and pause toggle</string>
    <string name="label_previous">Previous track</string>
    <string name="label_next">Next track</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Wifi</string>
    <string name="pref_description_social_recommendations">Wifi connection is in most cases free
    </string>
    <string name="pref_title_mobile_data">Mobile Data
    </string>
    <string name="pref_description_mobile_data">Mobile Data can lead to extra costs when streaming online radio
    </string>

    <string name="pref_title_add_friends_to_messages">Radio online views</string>
    <string-array name="pref_example_list_titles">
        <item>Favorites</item>
        <item>Default List</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>Favorites</item>
        <item>Default_List</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_sync">Refresh Data</string>

</resources>