<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="za.co.samtakie.samtakieradio.ui.DetailActivity">
    <item
        android:id="@+id/action_list"
        android:orderInCategory="10"
        android:icon="@drawable/ic_view_list_menu"
        android:title="@string/action_list"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="20"
        android:title="@string/action_favorites"
        android:icon="@drawable/ic_favorite_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="30"
        android:icon="@drawable/ic_share_menu"
        android:title="@string/action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>