<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="za.co.samtakie.samtakieradio.ui.DetailActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="10"
        android:icon="@drawable/ic_share_menu"
        android:title="@string/action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_news"
        android:orderInCategory="20"
        android:icon="@drawable/ic_message"
        android:title="@string/action_message"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="30"
        android:icon="@drawable/ic_sync"
        android:title="@string/action_sync"
        app:showAsAction="ifRoom"
        />

</menu>
